--- a/plugin.xml
+++ b/plugin.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" ?>
 <plugin>
-
    <extension id="menu.HetsMenu"
 	      name="HetsMenu"
               point="org.protege.editor.core.application.EditorKitMenuAction">
@@ -13,7 +12,7 @@
    <extension id="HetsLocalImportAction"
               point="org.protege.editor.core.application.EditorKitMenuAction">
       <name value="Import HetCASL (local hets)" />
-      <path value="org.protege.editor.owl.menu.tools/SlotH-A" />
+      <path value="de.unibremen.informatik.hets.menu.HetsMenu/SlotAA-A" />
       <editorKitId value="OWLEditorKit" />
       <class value="de.unibremen.informatik.hets.protege.LocalImportHetsAction" />
       <toolTip value="import OWL from HetCASL files using local hets installation" />
@@ -22,7 +21,7 @@
    <extension id="HetsCGIImportAction"
               point="org.protege.editor.core.application.EditorKitMenuAction">
       <name value="Import HetCASL (remote cgi)" />
-      <path value="org.protege.editor.owl.menu.tools/SlotH-B" />
+      <path value="de.unibremen.informatik.hets.menu.HetsMenu/SlotAA-B" />
       <editorKitId value="OWLEditorKit" />
       <class value="de.unibremen.informatik.hets.protege.CGIImportHetsAction" />
       <toolTip value="import OWL from HetCASL files using online cgi" />
@@ -31,7 +30,7 @@
    <extension id="HetsImportAction"
               point="org.protege.editor.core.application.EditorKitMenuAction">
       <name value="Import HetCASL (custom parser)" />
-      <path value="org.protege.editor.owl.menu.tools/SlotH-C" />
+      <path value="de.unibremen.informatik.hets.menu.HetsMenu/SlotAA-C" />
       <editorKitId value="OWLEditorKit" />
       <class value="de.unibremen.informatik.hets.protege.ImportHetsAction" />
       <toolTip value="import OWL from HetCASL files using local parser" />
@@ -40,7 +39,7 @@
    <extension id="HetsExportAction"
               point="org.protege.editor.core.application.EditorKitMenuAction">
       <name value="Export HetCASL" />
-      <path value="org.protege.editor.owl.menu.tools/SlotH-D" />
+      <path value="de.unibremen.informatik.hets.menu.HetsMenu/SlotAB-A" />
       <editorKitId value="OWLEditorKit" />
       <class value="de.unibremen.informatik.hets.protege.ExportHetsAction" />
       <toolTip value="export OWL to HetCASL file" />
